--- a/config/lily58.conf
+++ b/config/lily58.conf
@@ -3,7 +3,7 @@
 # CONFIG_EC11_TRIGGER_GLOBAL_THREAD=y
 
 # Uncomment the following line to enable the Lily58 OLED Display
-CONFIG_ZMK_STUDIO=y
+#CONFIG_ZMK_STUDIO=y
 
 # 电池电量报告间隔时间单位是秒
 CONFIG_ZMK_BATTERY_REPORT_INTERVAL=60
