--- a/config/lily58.conf
+++ b/config/lily58.conf
@@ -19,3 +19,4 @@ CONFIG_ZMK_RGB_UNDERGLOW_AUTO_OFF_IDLE=y
 CONFIG_ZMK_RGB_UNDERGLOW_EFF_START=3
 CONFIG_ZMK_RGB_UNDERGLOW_BRT_MAX=60
 CONFIG_ZMK_RGB_UNDERGLOW_EXT_POWER=n
+CONFIG_I2C=y
