--- a/config/lily58.conf
+++ b/config/lily58.conf
@@ -9,9 +9,9 @@ CONFIG_ZMK_IDLE_TIMEOUT=600000
 CONFIG_ZMK_SLEEP=y
 # Milliseconds of inactivity before entering deep sleep (15 minutes)
 CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=900000
-CONFIG_ZMK_STUDIO=y
-CONFIG_ZMK_STUDIO_LOCKING=n
-CONFIG_ZMK_STUDIO_LOCK_ON_DISCONNECT=n
+#CONFIG_ZMK_STUDIO=y
+#CONFIG_ZMK_STUDIO_LOCKING=n
+#CONFIG_ZMK_STUDIO_LOCK_ON_DISCONNECT=n
 CONFIG_ZMK_RGB_UNDERGLOW=y
 CONFIG_WS2812_STRIP=y
 CONFIG_ZMK_BACKLIGHT_AUTO_OFF_IDLE=y
