--- a/config/lily58.conf
+++ b/config/lily58.conf
@@ -9,7 +9,7 @@ CONFIG_ZMK_IDLE_TIMEOUT=600000
 CONFIG_ZMK_SLEEP=y
 # Milliseconds of inactivity before entering deep sleep (15 minutes)
 CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=900000
-#CONFIG_ZMK_STUDIO=y
+CONFIG_ZMK_STUDIO=y
 #CONFIG_ZMK_STUDIO_LOCKING=n
 #CONFIG_ZMK_STUDIO_LOCK_ON_DISCONNECT=n
 CONFIG_ZMK_RGB_UNDERGLOW=y
