--- a/config/lily58.conf
+++ b/config/lily58.conf
@@ -21,6 +21,6 @@ CONFIG_ZMK_RGB_UNDERGLOW_BRT_MAX=60
 CONFIG_ZMK_RGB_UNDERGLOW_EXT_POWER=n
 CONFIG_I2C=y
 CONFIG_DISPLAY=y
-CONFIG_SSD1306=y
-CONFIG_SSD1306_SH1106_COMPATIBLE=y
-CONFIG_ws2812=y
+#CONFIG_SSD1306=y
+#CONFIG_SSD1306_SH1106_COMPATIBLE=y
+#CONFIG_ws2812=y
